# tracegrind

./: Makefile.am  Makefile.in  Makefile.top.mk  README.md  config.h  configure  configure.ac  gen.sh  gtag.sh
exp-dhat/: dh_main.c
taintgrind/: .gdb_history  tnt_include.h  tnt_main.c  tnt_malloc_wrappers.c  tnt_translate.c
tracegrind/: Makefile.am  tracegrind.h  trc_include.h  trc_main.c  trc_replace_strmem.c  trc_replace_strmem.h
tracegrind/docs/: Makefile.am~
tracegrind/test/: Makefile.am~
tracegrind/tests/: Makefile.am  base.c  base.vgtest
